fixed overflow

--- a/react-app/src/components/Main/main.css
+++ b/react-app/src/components/Main/main.css
@@ -67,7 +67,7 @@
     flex-direction: column;
 
     width: 50%;
-    height: 100%;
+    height: 90%;
     overflow-y:scroll;
 
 }
